--- a/styles/index.scss
+++ b/styles/index.scss
@@ -7,6 +7,7 @@
 
 .container80 {
     width: 80%;
+    max-width: 1200px;
     display: flex;
     flex-direction: column;
 }
@@ -18,6 +19,7 @@
 .foot {
     width: 100%;
     height: 10%;
+    color: $color_gray;
     display: flex;
     flex-direction: column;
     align-items: center;
