--- a/styles/comps/projdes.scss
+++ b/styles/comps/projdes.scss
@@ -6,16 +6,29 @@
     flex-direction: column;
     align-items: flex-start;
     font-size: 1.2rem;
+
+    @media (max-width: 600px) {
+        width: 80%; 
+        padding: 15px 0;
+    }
 }
 
 .proj-des-h {
     display: flex;
     flex-direction: row;
+
+    @media (max-width: 600px) { 
+        padding: 15px 0 0 0;
+    }
 }
 
 .proj-des-body {
     display: flex;
     flex-direction: row;
     padding-left: 10%;
+
+    @media (max-width: 1000px) { 
+        flex-direction: column;
+    }
 }
 
