--- a/styles/comps/projimage.scss
+++ b/styles/comps/projimage.scss
@@ -6,6 +6,11 @@
     flex-direction: row;
     justify-content: center;
     padding-right: 10px;
+
+    @media (max-width: 600px) {
+        padding-right: 0;
+        padding: 10px 0;
+    }
 }
 
 .img-pad {
@@ -14,6 +19,10 @@
     border: solid 1px $color_gray;
     background-color: $color_black;
     margin-right: 5%;
+
+    @media (max-width: 600px) {
+        margin-right: 0;
+    }
 }
 
 .img-pad-l {
@@ -35,9 +44,17 @@
 .img-s {
     width: 150px;
     border-radius: 7px;
+
+    @media (max-width: 600px) {
+        width: 120px;
+    }
 }
 
 .img-l {
     width: 350px;
     border-radius: 7px;
+
+    @media (max-width: 600px) {
+        width: 300px;
+    }
 }
