--- a/styles/index.scss
+++ b/styles/index.scss
@@ -10,6 +10,11 @@
     max-width: 1200px;
     display: flex;
     flex-direction: column;
+
+    @media (max-width: 600px) { 
+        width: 100%;
+        align-items: center;
+    }
 }
 
 .maincont {
@@ -23,4 +28,5 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+
 }
