--- a/styles/views/about.scss
+++ b/styles/views/about.scss
@@ -6,6 +6,10 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+
+    @media (max-width: 600px) {
+        width: 100%;
+    }
 }
 
 .about-container {
@@ -14,6 +18,9 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    @media (max-width: 600px) {
+        width: 80%;
+    }
 }
 
 .name-obj {
