--- a/styles/views/mainui.scss
+++ b/styles/views/mainui.scss
@@ -4,11 +4,18 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+
+    @media (max-width: 600px) { 
+        flex-direction: column;
+    }
 }
 
 .main-col {
     width: 50%;
     height: 100%;
+    @media (max-width: 600px) { 
+        width: 80%;
+    }
 }
 
 .main-header {
@@ -17,6 +24,10 @@
     flex-direction: row;
     justify-content: center;
     padding-top: 20px;
+
+    @media (max-width: 600px) { 
+        padding-top: 10px;
+    }
 }
 
 .section-title {
