--- a/styles/views/projects.scss
+++ b/styles/views/projects.scss
@@ -6,6 +6,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+
 }
 
 .projects-col {
@@ -15,4 +16,8 @@
     flex-direction: row;
     align-items: center;
     justify-content: center;
+
+    @media (max-width: 600px) { 
+        width: 90%;
+    }
 }
