--- a/styles/comps/headerui.scss
+++ b/styles/comps/headerui.scss
@@ -1,10 +1,13 @@
 
 .header-cont {
     width: 100%;
-    height: 15%;
+    height: 200px;
     display: flex;
     flex-direction: row;
     justify-content: center;
+    @media (max-width: 600px) {
+        height: 100%;
+    }
 }
 
 .navbar-l {
@@ -13,6 +16,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
     @media (max-width: 600px) { 
         width: 90%;
         justify-content: center;
@@ -26,6 +30,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
     @media (max-width: 600px) { 
         display: none;
     }
