--- a/styles/index.scss
+++ b/styles/index.scss
@@ -1,5 +1,6 @@
 .main-body {
-    width: 100%;
+    width: 100vw;
+    height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -23,7 +24,7 @@
 
 .foot {
     width: 100%;
-    height: 10%;
+    height: 20%;
     color: $color_gray;
     display: flex;
     flex-direction: column;
