--- a/styles/comps/headerui.scss
+++ b/styles/comps/headerui.scss
@@ -1,7 +1,7 @@
 
 .header-cont {
     width: 100%;
-    height: 200px;
+    height: 100px;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -11,21 +11,22 @@
 }
 
 .navbar-l {
-    width: 50%;
+    width: 40%;
     padding: 20px 0;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
     @media (max-width: 600px) { 
-        width: 90%;
-        justify-content: center;
-        padding: 40px 0 0 0;
+        justify-content: flex-start;
+    }
+    @media (max-width: 820px) {
+        width: 30%;
     }
 }
 
 .navbar-r {
-    width: 50%;
+    width: 60%;
     padding: 20px 0;
     display: flex;
     flex-direction: row;
@@ -34,15 +35,37 @@
     @media (max-width: 600px) { 
         display: none;
     }
+    @media (max-width: 820px) {
+        width: 70%;
+    }
 }
 
-.navbar-r p {
+.hem-menu {
+    width: 60%;
+    justify-content: flex-end;
+    align-items: center;
+    display: none;
+
+    @media (max-width: 600px) { 
+        display: flex;
+    }
+}
+
+.hem-bar{
+    width: 35px;
+}
+
+.close-sign{
+    width: 30px;
+}
+
+.nav-item {
     font-size: 1.2rem;
     color: $color_green;
     cursor: default;
 }
 
-.navbar-r p:hover {
+.nav-item:hover {
     color: $color_white;
 }
 
@@ -51,4 +74,39 @@
     @media (max-width: 600px) { 
         width: 40px;
     }
+}
+
+.showing-menu{
+    width: 100%;
+    min-height: 100vh;
+    padding: 20px;
+    background-color: $color_black;
+    color: $color_white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: absolute;
+    right: 0; 
+    opacity: 0.95;
+}
+
+.menu-head{
+    width: 100%;
+    display: flex;
+    padding-bottom: 15px;
+    justify-content: flex-end;
+    border-bottom: solid 1px $color_gray;
+}
+
+.showing-menu-wrapper{
+    width: 100%;
+    padding-left: 20%;
+    display: flex;
+    border-bottom: solid 1px $color_gray;
+}
+
+.showing-menu-item {
+    font-size: 1.5rem;
+    color: $color_green;
+    cursor: default;
 }
