--- a/styles/comps/descrip.scss
+++ b/styles/comps/descrip.scss
@@ -75,3 +75,20 @@
     align-items: center;
     border-left: solid 1px $color_gray;
 }
+
+.button-wrapper{
+    width: 100%;
+    padding: 10px;
+    display: flex;
+    justify-content: center;
+}
+
+.button-style{
+    color: $color_green;
+    padding: 0 5%;
+    cursor: default;
+}
+
+.button-style:hover {
+    color: $color_white;
+}
