--- a/styles/comps/listsui.scss
+++ b/styles/comps/listsui.scss
@@ -1,9 +1,12 @@
 @import '../config/color.scss';
 
 .list-containter {
-    width: 100%;
+    width: 200px;
     display: flex;
     flex-direction: column;
+    @media (max-width: 600px) {
+        width: 100%;
+    }
 }
 
 .list-title {
