--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -117,7 +117,7 @@ a {
   height: 2px;
   width: 100%;
   border-bottom: solid 1px rgb(36, 36, 36);
-  margin: 20px;
+  margin: 20px 0;
 }
 
 .flow-header{
